domino/src/price/S
dopricewidget.c:92:14: error: unknown type name ‘GdkRGBA’
 static const GdkRGBA  alert_color = {1, 0.933333333,0.933333333,1};
              ^~~~~~~
dopricewidget.c:92:41: warning: excess elements in scalar initializer
 static const GdkRGBA  alert_color = {1, 0.933333333,0.933333333,1};
                                         ^~~~~~~~~~~
dopricewidget.c:92:41: note: (near initialization for ‘alert_color’)
dopricewidget.c:92:53: warning: excess elements in scalar initializer
 static const GdkRGBA  alert_color = {1, 0.933333333,0.933333333,1};
                                                     ^~~~~~~~~~~
dopricewidget.c:92:53: note: (near initialization for ‘alert_color’)
dopricewidget.c:92:65: warning: excess elements in scalar initializer
 static const GdkRGBA  alert_color = {1, 0.933333333,0.933333333,1};
                                                                 ^
dopricewidget.c:92:65: note: (near initialization for ‘alert_color’)
dopricewidget.c: In function ‘do_price_widget_constructor’:
dopricewidget.c:268:24: warning: implicit declaration of function ‘gtk_box_new’ [-Wimplicit-function-declaration]
         priv->header = gtk_box_new (GTK_ORIENTATION_HORIZONTAL, 0);
                        ^~~~~~~~~~~
dopricewidget.c:268:22: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
         priv->header = gtk_box_new (GTK_ORIENTATION_HORIZONTAL, 0);
                      ^
dopricewidget.c:291:19: warning: implicit declaration of function ‘gtk_paned_new’ [-Wimplicit-function-declaration]
     priv->paned = gtk_paned_new (GTK_ORIENTATION_VERTICAL);
                   ^~~~~~~~~~~~~
dopricewidget.c:291:17: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     priv->paned = gtk_paned_new (GTK_ORIENTATION_VERTICAL);
                 ^
dopricewidget.c: In function ‘do_price_widget_make_header’:
dopricewidget.c:1620:37: warning: implicit declaration of function ‘gtk_menu_button_new’ [-Wimplicit-function-declaration]
     widget->priv->button_menu = w = gtk_menu_button_new ();
                                     ^~~~~~~~~~~~~~~~~~~
dopricewidget.c:1620:35: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     widget->priv->button_menu = w = gtk_menu_button_new ();
                                   ^
dopricewidget.c:1623:8: error: expected ‘(’ before ‘GTK_IS_HEADER_BAR’
     if GTK_IS_HEADER_BAR (widget->priv->header)
        ^~~~~~~~~~~~~~~~~
dopricewidget.c:1623:8: warning: implicit declaration of function ‘GTK_IS_HEADER_BAR’ [-Wimplicit-function-declaration]
dopricewidget.c:1641:8: error: expected ‘(’ before ‘GTK_IS_HEADER_BAR’
     if GTK_IS_HEADER_BAR (widget->priv->header)
        ^~~~~~~~~~~~~~~~~
dopricewidget.c:1652:5: warning: implicit declaration of function ‘gtk_menu_button_set_popover’ [-Wimplicit-function-declaration]
     gtk_menu_button_set_popover (GTK_MENU_BUTTON (w), widget->priv->suppliers_widget);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
dopricewidget.c:1652:34: warning: implicit declaration of function ‘GTK_MENU_BUTTON’ [-Wimplicit-function-declaration]
     gtk_menu_button_set_popover (GTK_MENU_BUTTON (w), widget->priv->suppliers_widget);
                                  ^~~~~~~~~~~~~~~
dopricewidget.c:1656:37: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     widget->priv->button_search = w = gtk_menu_button_new ();
                                     ^
dopricewidget.c:1659:8: error: expected ‘(’ before ‘GTK_IS_HEADER_BAR’
     if GTK_IS_HEADER_BAR (widget->priv->header)
        ^~~~~~~~~~~~~~~~~
dopricewidget.c: In function ‘do_price_widget_make_suppliers_view’:
dopricewidget.c:1695:9: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     box = gtk_box_new (GTK_ORIENTATION_VERTICAL, 6);
         ^
dopricewidget.c:1698:12: warning: implicit declaration of function ‘gtk_button_box_new’ [-Wimplicit-function-declaration]
     hbox = gtk_button_box_new (GTK_ORIENTATION_HORIZONTAL);
            ^~~~~~~~~~~~~~~~~~
dopricewidget.c:1698:10: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     hbox = gtk_button_box_new (GTK_ORIENTATION_HORIZONTAL);
          ^
dopricewidget.c:1699:55: error: ‘GTK_BUTTONBOX_EXPAND’ undeclared (first use in this function)
     gtk_button_box_set_layout (GTK_BUTTON_BOX (hbox), GTK_BUTTONBOX_EXPAND);
                                                       ^~~~~~~~~~~~~~~~~~~~
dopricewidget.c:1699:55: note: each undeclared identifier is reported only once for each function it appears in
g++: error: ../..//var/Linux/Debian/stretch/x86_64/price/dopricewidget.c.o: Нет такого файла или каталога
make: *** [price] Ошибка 1
